[gd_scene load_steps=32 format=3 uid="uid://gpi3rtcvtk4r"]

[ext_resource type="Script" uid="uid://b2dsu58yfd5a7" path="res://objects/pause_menu/pause_menu.gd" id="1_0r2dl"]
[ext_resource type="FontFile" uid="uid://cup2yr5w7or1l" path="res://fonts/Minnie.TTF" id="1_nhuu3"]
[ext_resource type="PackedScene" uid="uid://b0d1er4oqiqcn" path="res://objects/general_ui/general_button/general_button.tscn" id="2_fdjxk"]
[ext_resource type="Shader" uid="uid://dri3mi0a32658" path="res://objects/pause_menu/canvas_blur_shader.gdshader" id="2_jjheh"]
[ext_resource type="FontFile" uid="uid://815gwlftl5ik" path="res://fonts/impress-bt.ttf" id="3_ij621"]
[ext_resource type="Shader" uid="uid://ryrnfqn0ixe5" path="res://scenes/title_screen/hue_shift.gdshader" id="4_sgslx"]
[ext_resource type="PackedScene" uid="uid://ewhq7f4agtnn" path="res://objects/quests/scroll/quest_scroll.tscn" id="4_wy1sv"]
[ext_resource type="Texture2D" uid="uid://ddcktpjy3gdew" path="res://ui_assets/misc/uiAccessoryDelete_up.png" id="6_2ls0o"]
[ext_resource type="Texture2D" uid="uid://b7ri5sq021cvo" path="res://ui_assets/misc/uiAccessoryDelete_down.png" id="7_pio3r"]
[ext_resource type="Texture2D" uid="uid://dn8vndd37lqom" path="res://ui_assets/misc/uiAccessoryDelete_rollover.png" id="8_l83vw"]
[ext_resource type="Texture2D" uid="uid://tyjutuxwdlop" path="res://ui_assets/quests/gear2.png" id="10_lmpwx"]
[ext_resource type="PackedScene" uid="uid://bwnrw7jcf01kq" path="res://objects/general_ui/node_viewer/node_viewer.tscn" id="13_6fvpv"]
[ext_resource type="Texture2D" uid="uid://dp60mor8isqvc" path="res://ui_assets/battle/gags/tt_t_gui_bat_pass.png" id="13_vloq5"]
[ext_resource type="PackedScene" uid="uid://3wpuwo50gkt" path="res://objects/player/ui/item_display.tscn" id="14_0372c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lvkcj"]
shader = ExtResource("2_jjheh")
shader_parameter/strength = 10.0
shader_parameter/sample_power = 3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_10epn"]
shader = ExtResource("4_sgslx")
shader_parameter/Shift_Hue = 0.585
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ry7vf"]
shader = ExtResource("4_sgslx")
shader_parameter/Shift_Hue = 0.585
shader_parameter/alpha = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_khjnh"]
font = ExtResource("3_ij621")
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sohev"]
font = ExtResource("1_nhuu3")
font_size = 28
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0wxjl"]
font = ExtResource("1_nhuu3")
font_size = 32
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_w52ml"]
font = ExtResource("1_nhuu3")
font_size = 32
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m8075"]
font = ExtResource("1_nhuu3")
font_size = 20
font_color = Color(0.992165, 0.682616, 0.465558, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oacmx"]
font = ExtResource("1_nhuu3")
font_size = 20
font_color = Color(0.687588, 0.74357, 0.925783, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ftg7t"]
font = ExtResource("1_nhuu3")
font_size = 20
font_color = Color(0.894916, 0.660997, 0.86582, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_j0dlo"]
font = ExtResource("1_nhuu3")
font_size = 20
font_color = Color(0.568627, 0.862745, 0.623529, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7el0f"]
font = ExtResource("1_nhuu3")
font_size = 20
font_color = Color(0.984314, 0.65098, 0.592157, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qf26x"]
font = ExtResource("1_nhuu3")
font_size = 20
font_color = Color(0.992759, 0.914398, 0.738453, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_nqfjm"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_klw45"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackdropHolder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FloorMainHolder:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackdropHolder/Backdrop/Buttons:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StatsHolder:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RewardHolder:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Quests/QuestTitle:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(166.833, -60.854)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Quests/Quest1:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.7, 0.7)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Blur:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yqy0f"]
resource_name = "pause_on"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(0.15, 1),
"update": 0,
"values": [Vector2(-1152, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackdropHolder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(0.15, 1),
"update": 0,
"values": [Vector2(0, 100), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FloorMainHolder:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.5),
"transitions": PackedFloat32Array(0.15, 1),
"update": 0,
"values": [Vector2(0, -328), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackdropHolder/Backdrop/Buttons:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(0.15, 1),
"update": 0,
"values": [Vector2(-1, -10), Vector2(-1, -10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StatsHolder:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(0.15, 1),
"update": 0,
"values": [Vector2(520, 0), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RewardHolder:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0333333, 0.45),
"transitions": PackedFloat32Array(0.15, 1),
"update": 0,
"values": [Vector2(384, 0), Vector2(-1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Quests/QuestTitle:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.47),
"transitions": PackedFloat32Array(0.15, 1),
"update": 0,
"values": [Vector2(166.832, -127.694), Vector2(166.833, -60.854)]
}
tracks/7/type = "animation"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Quests/Quest1/AnimationPlayer")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"clips": PackedStringArray("quest_pop-in"),
"times": PackedFloat32Array(0.0333333)
}
tracks/8/type = "animation"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Quests/Quest2/AnimationPlayer")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": PackedStringArray("quest_pop-in"),
"times": PackedFloat32Array(0.0666667)
}
tracks/9/type = "animation"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Quests/Quest3/AnimationPlayer")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"clips": PackedStringArray("quest_pop-in"),
"times": PackedFloat32Array(0.1)
}
tracks/10/type = "animation"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Quests/Quest4/AnimationPlayer")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"clips": PackedStringArray("quest_pop-in"),
"times": PackedFloat32Array(0.133333)
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Quests/Quest1:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(0, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.7, 0.7)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Quests/Quest2:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.7, 0.7)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Quests/Quest3:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(0, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.7, 0.7)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Quests/Quest4:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(0, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.7, 0.7)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Blur:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gpmgs"]
_data = {
&"RESET": SubResource("Animation_klw45"),
&"pause_on": SubResource("Animation_yqy0f")
}

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("quest_scrolls")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0r2dl")
quest_scrolls = [NodePath("Quests/Quest1"), NodePath("Quests/Quest2"), NodePath("Quests/Quest3"), NodePath("Quests/Quest4")]

[node name="Blur" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_lvkcj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.856067, 0.856067, 0.856067, 1)

[node name="BackdropHolder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Backdrop" type="ColorRect" parent="BackdropHolder"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.34902)

[node name="Buttons" type="HBoxContainer" parent="BackdropHolder/Backdrop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -10.0
offset_right = -1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(152, 126)
theme_override_constants/separation = 64
alignment = 1

[node name="Resume" parent="BackdropHolder/Backdrop/Buttons" instance=ExtResource("2_fdjxk")]
material = SubResource("ShaderMaterial_10epn")
custom_minimum_size = Vector2(230, 100)
layout_mode = 2
texture_normal = ExtResource("6_2ls0o")
texture_pressed = ExtResource("7_pio3r")
texture_hover = ExtResource("8_l83vw")
texture_disabled = ExtResource("7_pio3r")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "Resume"

[node name="Settings" parent="BackdropHolder/Backdrop/Buttons" instance=ExtResource("2_fdjxk")]
material = SubResource("ShaderMaterial_ry7vf")
custom_minimum_size = Vector2(230, 100)
layout_mode = 2
texture_normal = ExtResource("6_2ls0o")
texture_pressed = ExtResource("7_pio3r")
texture_hover = ExtResource("8_l83vw")
texture_disabled = ExtResource("7_pio3r")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "Settings"

[node name="Quit" parent="BackdropHolder/Backdrop/Buttons" instance=ExtResource("2_fdjxk")]
custom_minimum_size = Vector2(230, 100)
layout_mode = 2
texture_normal = ExtResource("6_2ls0o")
texture_pressed = ExtResource("7_pio3r")
texture_hover = ExtResource("8_l83vw")
texture_disabled = ExtResource("7_pio3r")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "Quit"

[node name="VersionLabel" type="Label" parent="BackdropHolder/Backdrop"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -23.0
offset_right = 7.0
grow_horizontal = 2
grow_vertical = 0
text = "v1.0"
label_settings = SubResource("LabelSettings_khjnh")

[node name="FloorMainHolder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FloorMainContainer" type="VBoxContainer" parent="FloorMainHolder"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 200)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -593.0
offset_top = 132.0
offset_right = -43.0
offset_bottom = 332.0
grow_horizontal = 0
scale = Vector2(1, 0.995118)
theme_override_constants/separation = -8

[node name="FloorContainer" type="HBoxContainer" parent="FloorMainHolder/FloorMainContainer"]
custom_minimum_size = Vector2(550, 100)
layout_mode = 2
alignment = 1

[node name="FacilityIcon" type="TextureRect" parent="FloorMainHolder/FloorMainContainer/FloorContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_lmpwx")
expand_mode = 1
stretch_mode = 5

[node name="FloorLabel" type="Label" parent="FloorMainHolder/FloorMainContainer/FloorContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "Placeholder Facility"
label_settings = SubResource("LabelSettings_sohev")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FacilityIcon2" type="TextureRect" parent="FloorMainHolder/FloorMainContainer/FloorContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_lmpwx")
expand_mode = 1
stretch_mode = 5

[node name="AnomaliesContainer" type="HBoxContainer" parent="FloorMainHolder/FloorMainContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Quests" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 22.0
offset_top = 88.0
offset_right = 672.0
offset_bottom = 588.0
scale = Vector2(0.995009, 1.0024)
mouse_filter = 2

[node name="QuestTitle" type="Label" parent="Quests"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -158.167
offset_top = -60.854
offset_right = 34.833
offset_bottom = -27.8535
grow_horizontal = 2
text = "ToonTasks"
label_settings = SubResource("LabelSettings_0wxjl")

[node name="Quest1" parent="Quests" instance=ExtResource("4_wy1sv")]
layout_mode = 1
offset_left = -57.0
offset_top = -54.9761
offset_right = 323.0
offset_bottom = 245.024
scale = Vector2(0.7, 0.7)

[node name="Quest2" parent="Quests" instance=ExtResource("4_wy1sv")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -437.0
offset_top = -54.9761
offset_right = -57.0
offset_bottom = 245.024
grow_horizontal = 0
scale = Vector2(1e-05, 1e-05)

[node name="Quest3" parent="Quests" instance=ExtResource("4_wy1sv")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -354.976
offset_right = 323.0
offset_bottom = -54.9761
grow_vertical = 0
scale = Vector2(1e-05, 1e-05)

[node name="Quest4" parent="Quests" instance=ExtResource("4_wy1sv")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -437.0
offset_top = -354.976
offset_right = -57.0
offset_bottom = -54.9761
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1e-05, 1e-05)

[node name="StatsHolder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Stats" type="PanelContainer" parent="StatsHolder"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(230, 200)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -85.0
offset_right = -291.0
offset_bottom = 125.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(115, 105)

[node name="MarginContainer" type="MarginContainer" parent="StatsHolder/Stats"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="StatsHolder/Stats/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Stats" type="Label" parent="StatsHolder/Stats/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "STATS"
label_settings = SubResource("LabelSettings_w52ml")
vertical_alignment = 1

[node name="Spacer" type="Control" parent="StatsHolder/Stats/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Damage" type="Label" parent="StatsHolder/Stats/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Damage: 1.0"
label_settings = SubResource("LabelSettings_m8075")
vertical_alignment = 1

[node name="Defense" type="Label" parent="StatsHolder/Stats/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Defense: 1.0"
label_settings = SubResource("LabelSettings_oacmx")
vertical_alignment = 1

[node name="Evasiveness" type="Label" parent="StatsHolder/Stats/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Evasiveness: 1.0"
label_settings = SubResource("LabelSettings_ftg7t")
vertical_alignment = 1

[node name="Luck" type="Label" parent="StatsHolder/Stats/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Luck: 1.0"
label_settings = SubResource("LabelSettings_j0dlo")
vertical_alignment = 1

[node name="Speed" type="Label" parent="StatsHolder/Stats/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Speed: 1.0"
label_settings = SubResource("LabelSettings_7el0f")
vertical_alignment = 1

[node name="RewardHolder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ItemReward" type="Control" parent="RewardHolder"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -267.0
offset_top = -74.0
offset_right = -143.0
offset_bottom = 63.0
grow_horizontal = 0
grow_vertical = 2

[node name="FloorRewardLabel" type="Label" parent="RewardHolder/ItemReward"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 34.0
grow_horizontal = 2
text = "Floor Reward:"
label_settings = SubResource("LabelSettings_qf26x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RewardView" parent="RewardHolder/ItemReward" instance=ExtResource("13_6fvpv")]
unique_name_in_owner = true
custom_minimum_size = Vector2(105, 107)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -76.0
offset_right = 53.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("ViewportTexture_nqfjm")
expand_mode = 1

[node name="NoReward" type="TextureRect" parent="RewardHolder/ItemReward"]
unique_name_in_owner = true
custom_minimum_size = Vector2(105, 107)
layout_mode = 0
offset_left = 10.0
offset_top = 61.0
offset_right = 115.0
offset_bottom = 168.0
pivot_offset = Vector2(52.5, 53.5)
texture = ExtResource("13_vloq5")
expand_mode = 1

[node name="ItemHolder" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ItemDisplay" parent="ItemHolder" instance=ExtResource("14_0372c")]
custom_minimum_size = Vector2(128, 68)
layout_mode = 1
offset_top = -148.0
offset_bottom = -80.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gpmgs")
}

[connection signal="pressed" from="BackdropHolder/Backdrop/Buttons/Resume" to="." method="resume"]
[connection signal="pressed" from="BackdropHolder/Backdrop/Buttons/Settings" to="." method="open_settings"]
[connection signal="pressed" from="BackdropHolder/Backdrop/Buttons/Quit" to="." method="quit"]
